# TranslationMethods

./: CMakeLists.txt  README.md  main.cpp  visualizator.h
Lab2/: visualizator.cpp
Lab2/tests/: t2.txt  t7.txt  t8.txt
Lab3/: input3.pas
Lab3/src/: Main.java  PascalGrammar.g4
Lab3/src/utils/: Utils.java
paskal_function_header/: CMakeLists.txt  lexical_analyzer.cpp  lexical_analyzer.h  parse_exception.h  parser.cpp  parser.h
tests/: t1.txt  t3.txt  t4.txt  t5.txt  t6.txt
